--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^4.13.0",
     "nuka-carousel": "^4.6.0",
     "react": "^16.12.0",
+    "react-beautiful-dnd": "^12.2.0",
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
