--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,10 @@
     "google-map-react": "^1.1.5",
     "google-maps-react": "^2.0.2",
     "moment": "^2.24.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "nuka-carousel": "^4.6.0",
     "react": "^16.12.0",
+    "react-calendar": "^2.19.2",
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
