--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,8 @@
     "node-sass": "^4.13.1",
     "nuka-carousel": "^4.6.0",
     "react": "^16.12.0",
-    "react-calendar": "^2.19.2",
     "react-beautiful-dnd": "^12.2.0",
+    "react-calendar": "^2.19.2",
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -27,6 +27,7 @@
     "react-spring-3d-carousel": "^1.1.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.0.0"
   },
