--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "resolve-url-loader": "^3.1.1"
   }
 }
