--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,9 +27,11 @@
     "react-spring-3d-carousel": "^1.1.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "resolve-url-loader": "^2.3.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "url-loader": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,7 +54,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "resolve-url-loader": "^3.1.1"
-  }
+  "devDependencies": {}
 }
